[Features]Add new api for uploading users file
